--- a/src/Bosses/Bosspage.css
+++ b/src/Bosses/Bosspage.css
@@ -7,14 +7,15 @@
     text-align: center;
 }
 
-.container {
+
+.bossContainer {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    top: 22%;    
     align-items: center;
-    height: 100%; 
-    width: 101%;
-    position: fixed;
+    width: 100%;
+    position: absolute;
 }
 
 .bossInfo {
@@ -32,3 +33,20 @@
     text-align: center;
     font-size: large;
 }
+
+.video-responsive {
+    overflow: hidden;
+    padding-bottom: 56.25%;
+    position: relative;
+    height: 0;
+}
+  
+.video-responsive iframe {
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+  
+  
