--- a/src/Bosses/Bosspage.css
+++ b/src/Bosses/Bosspage.css
@@ -34,14 +34,14 @@
     font-size: large;
 }
 
-.video-responsive {
+.ytvideo {
     overflow: hidden;
     padding-bottom: 56.25%;
     position: relative;
     height: 0;
 }
   
-.video-responsive iframe {
+.ytvideo iframe {
     left: 0;
     top: 0;
     height: 100%;
